--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -2,7 +2,7 @@
   %h2= link_to article.title, article
   %p 
     Published at
-    = article.created_at.strftime('%b, %d, %Y')
+    = article.created_at.strftime('%b %d, %Y')
   %p= truncate(article.content, length: 200)
 
 - if user_signed_in?
